# video-translator

./: README.md  pyproject.toml
src/video_translator/: __init__.py  manage.py
src/video_translator/config/: __init__.py  settings.yml
src/video_translator/utils/: __init__.py  exceptions.py  kombu.py  log.py
tests/: test_version.py
tests/service/: rabbitmq.yml
