[tool.poetry]
name = "video-translator"
version = "0.1.0"
description = "视频翻译服务任务使用消息队列实现任务调度示例"
authors = ["Terry <17601306065@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dynaconf = "^3.2.3"
kombu = "^5.3.2"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
isort = "^5.12.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
